test/tests/compiler/18_structures/invalid_parse/var_decl_two_tags.plx
# Structure tag must be a single identifier

type struc x y (a: i32)
